# vitrage

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.rst  initial.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  run_vitrage.sh  run_vitrage_tempest.sh  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  apache-vitrage.template  gate_hook.sh  gate_hook_mock.sh  plugin.sh  post_test_hook.sh  pre_test_hook.sh  settings  settings.txt
devstack/upgrade/: settings  shutdhown.sh  upgrade.sh
doc/: requirements.txt
doc/source/: add-new-datasource.rst  alarm-severity-config.rst  alarm-state-config.rst  conf.py  host_high_memory_consumption.yaml  index.rst  installation-and-configuration.rst  installation.rst  nagios-config.rst  nagios-devstack-installation.rst  not_operator_support.rst  notifier-aodh-plugin.rst  profiler-config.rst  resource-state-config.rst  scenario-evaluator.rst  static-config.rst  static-physical-config.rst  template_validation_status_code.rst  templates-loading.rst  tempolate_validation_status_code.rst  usage.rst  vitrage-api.rst  vitrage-first_steps.rst  vitrage-graph-design.rst  vitrage-manual-installation.rst  vitrage-template-format.rst  vitrage-use-cases.rst  zabbix_vitrage.rst
etc/vitrage/: README-vitrage.conf.txt  alarms.sample.json  api-paste.ini  graph.sample.json  policy.json  rca.sample.json  vitrage-config-generator.conf  vitrage-policy-generator.conf  vitrage.conf.sample
install-guide/source/: common_configure.rst  common_prerequisites.rst  conf.py  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
releasenotes/notes/: SNMP_notifier-5c46505b3043b58f.yaml  Vitrage_ID-93737ff7b7ced8e9.yaml  add-upgrade-check-framework-166ba1c7e266953e.yaml  add_alarm_show_api-0b001dd185e2e523.yaml  alarm-and-rca-history-0c4c513c98fdc426.yaml  alarm_count_api-057138c8e0a36443.yaml  aodh_extended_alarm_support-327bb589311da440.yaml  aodh_gnocchi_thresh_alarm-a529ec4f50f3cb0c.yaml  collectd-datasource-a730f06aff840c8f.yaml  collector-cache-limitations-4eedef1c7664f5b0.yaml  collector-removal-fd805c6298d66eb0.yaml  collector-service-5848f96896f97d50.yaml  datasource-scaffold-2f5ee6f0d9f83099.yaml  definition_templates-6c2c10bb3e6912a1.yaml  deprecate-static-physical-datasource-ab0094620c05d0ea.yaml  doctor-datasource-59ee5b2afb677ab4.yaml  entity-equivalence-44c0da4cf3b5bc7e.yaml  event_persistor-1b0b4563cc219915.yaml  graph-fast-failover-e2d0a62f18ab27f7.yaml  health-check-api-19f180a104c7fa29.yaml  improve_tempest_tests-3e77197dfae4ad62.yaml  introduce-template-version-55bca9fc4e7d138f.yaml  keycloak_auth_support-cf8c2c504b3ddd5b.yaml  kubernetes-datasource-12af0f9caac1b21b.yaml  machine_learning_service-da9700e6c6fa61b6.yaml  mock-datasource-1c9b427bc16f4a59.yaml  multi_tenancy_support-feb3d2d4f8014b66.yaml  nested_stacks-fddbfa1f79b2ef43.yaml  not_operator_for_templates-f1e4c517236ca54e.yaml  nova-versioned-notifications-3c5ff450b9fe69f0.yaml  ocata-prelude-9b64d68bc898f7ec.yaml  parallel_evaluation-db8660ef3ff5b864.yaml  performance-bug-fixes-a2b5e85ee37bba93.yaml  persist_overlapping_scenarios-d426dffdf3d11094.yaml  policies-in-code-dd3f1490f7f5b3eb.yaml  prometheus_datasource-65c72bc8e7ec7622.yaml  queens-prelude-a00e64274e8e64be.yaml  refactor-execute-mistral-action-fc0fac84c07e1784.yaml  remove-static-physical-datasource-e8e70158f453cff1.yaml  rewrite-aodh-datasource-4968c32c1c5b81f1.yaml  (+19 more)
releasenotes/source/: conf.py  index.rst
tools/datasource-scaffold/: README  requirements.txt
tools/load_generator/: computes.yaml  load_generator.py  notification_info.py
vitrage/: __init__.py  clients.py  i18n.py  keystone_client.py  messaging.py  opts.py  os_clients.py  rpc.py  service.py
vitrage/api/: __init__.py  app.py  app.wsgi  hooks.py  policy.py
vitrage/api_handler/: apis.py  entity_graph_api.py  service.py
vitrage/cli/: __init__.py  api.py  collector.py  graph.py  machine_learning.py  notifier.py  persistor.py  snmp_parsing.py  status.py  storage.py
vitrage/cmd/: api.py  graph.py
vitrage/common/: constants.py  datetime_utils.py  exception.py  file_utils.py  utils.py
vitrage/datasources/: __init__.py  alarm_driver_base.py  alarm_properties.py  alarm_transformer_base.py  collector_notifier.py  driver_base.py  launcher.py  listener_service.py  rescheduler.py  resource_transformer_base.py  rpc_service.py  sample  services.py  transformer_base.py  utils.py
vitrage/entity_graph/: __init__.py  datasource_rpc.py  driver_exec.py  event_action.py  graph_init.py  scheduler.py  (+8 more)
(+847 files in other folders)
