[metadata]
name = vitrage
summary = The OpenStack RCA Engine
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/vitrage
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vitrage-api = vitrage.cmd.api:main
    vitrage-graph = vitrage.cmd.graph:main
    vitrage-notifier = vitrage.cmd.notifier:main

oslo.config.opts =
    vitrage = vitrage.opts:list_opts
    plugins = vitrage.opts:plugins_opts

keystoneauth1.plugin =
    password-vitrage-legacy = vitrage.keystone_client:LegacyVitrageKeystoneLoader

[files]
packages =
    vitrage

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

