[metadata]
name = vitrage
summary = The OpenStack RCA Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/vitrage/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vitrage-api = vitrage.cmd.api:main
    vitrage-graph = vitrage.cmd.graph:main
    vitrage-notifier = vitrage.cmd.notifier:main

vitrage.entity_graph =
    networkx = vitrage.graph.driver.networkx_graph:NXGraph

oslo.config.opts =
    vitrage = vitrage.opts:list_opts
    datasources = vitrage.opts:datasources_opts

keystoneauth1.plugin =
    password-vitrage-legacy = vitrage.keystone_client:LegacyVitrageKeystoneLoader

tempest.test_plugins =
    vitrage_tests = vitrage_tempest_tests.plugin:VitrageTempestPlugin

[files]
packages =
    vitrage
    vitrage_tempest_tests

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

