[metadata]
name = vitrage
summary = The OpenStack RCA Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/vitrage/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vitrage-api = vitrage.cli.api:main
    vitrage-graph = vitrage.cli.graph:main
    vitrage-notifier = vitrage.cli.notifier:main
    vitrage-collector = vitrage.cli.collector:main
    vitrage-persistor = vitrage.cli.persistor:main
    vitrage-ml = vitrage.cli.machine_learning:main
    vitrage-dbsync = vitrage.cli.storage:dbsync
    vitrage-snmp-parsing = vitrage.cli.snmp_parsing:main

vitrage.entity_graph =
    networkx = vitrage.graph.driver.networkx_graph:NXGraph

oslo.config.opts =
    vitrage = vitrage.opts:list_opts
    datasources = vitrage.opts:datasources_opts

oslo.policy.policies =
    vitrage = vitrage.common.policies:list_rules

vitrage.storage =
    mysql = vitrage.storage.impl_sqlalchemy:Connection
    mysql+pymysql = vitrage.storage.impl_sqlalchemy:Connection
    postgresql = vitrage.storage.impl_sqlalchemy:Connection
    sqlite = vitrage.storage.impl_sqlalchemy:Connection

[files]
packages =
    vitrage

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
